feat: semver-based version suggestion during build
Document SemVer rules and add scripts to suggest a version bump from recent commits. Build now writes a private SemVer prompt/suggestion and sets dist-public package.json version unless RELEASE_VERSION is provided. Publish can infer tag from build output.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "license": "MIT",
   "scripts": {
     "build": "node scripts/build_public.js",
-    "publish:public": "npm run build && node scripts/publish_public.js"
+    "publish:public": "npm run build && node scripts/publish_public.js",
+    "version:suggest": "node scripts/suggest_version.js"
   },
   "dependencies": {}
 }
