# Pull Request: 智能 CPU 负载阈值自动计算
## 问题描述

**当前问题**：
- `EVOLVE_LOAD_MAX` 默认值为固定 `2.0`
- 对单核机器过于激进（阈值 2.0 远超单核承受能力）
- 对多核机器过于保守（4 核机器阈值 2.0 过低，正常负载 2-3 也会触发退避）
- 导致 evolver 在正常系统负载下频繁退避，无法正常工作

**实际案例**：
- 用户环境：4 核 CPU，系统负载 2.07-3.15（正常范围）
- 旧阈值：2.0
- 结果：evolver 持续退避，32 小时未运行

## 解决方案

**智能默认值**：
- 单核机器：`0.9`（经验法则 0.8-1.0）
- 多核机器：`核心数 × 0.9`（经验法则 0.8-1.0）
- 仍支持 `EVOLVE_LOAD_MAX` 环境变量覆盖

**示例**：
| CPU 核心数 | 旧阈值 | 新阈值 | 说明 |
|-----------|--------|--------|------|
| 1 核 | 2.0 | 0.9 | 降低 55%，更安全 |
| 2 核 | 2.0 | 1.8 | 降低 10% |
| 4 核 | 2.0 | 3.6 | 提高 80%，更合理 |
| 8 核 | 2.0 | 7.2 | 提高 260%，更合理 |
| 16 核 | 2.0 | 14.4 | 提高 620%，更合理 |

## 代码改动

### 1. 新增函数 `getDefaultLoadMax()`

```javascript
// Calculate intelligent default load threshold based on CPU cores
// Rule of thumb (感谢晓雷的建议):
// - Single-core: 0.8-1.0 (use 0.9)
// - Multi-core: cores × 0.8-1.0 (use 0.9)
// - Production: reserve 20% headroom for burst traffic
function getDefaultLoadMax() {
  const cpuCount = os.cpus().length;

  if (cpuCount === 1) {
    // Single-core machine: use conservative threshold
    return 0.9;
  } else {
    // Multi-core machine: cores × 0.9
    // Examples: 4 cores → 3.6, 8 cores → 7.2, 16 cores → 14.4
    return cpuCount * 0.9;
  }
}
```

### 2. 修改负载检查逻辑

```javascript
// 旧代码
const LOAD_MAX = parseFloat(process.env.EVOLVE_LOAD_MAX || '2.0');

// 新代码
const LOAD_MAX = parseFloat(process.env.EVOLVE_LOAD_MAX || String(getDefaultLoadMax()));

// 改进日志输出
if (sysLoad.load1m > LOAD_MAX) {
  console.log(`[Evolver] System load ${sysLoad.load1m.toFixed(2)} exceeds max ${LOAD_MAX.toFixed(1)} (auto-calculated for ${os.cpus().length} cores). Backing off ${QUEUE_BACKOFF_MS}ms.`);
  // ...
}
```

## 测试结果

**环境**：macOS，4 核 CPU

```bash
# 测试智能默认值
CPU 核心数: 4
智能默认阈值: 3.6
当前系统负载: 2.91

# 测试环境变量覆盖
EVOLVE_LOAD_MAX=5.0
实际阈值: 5.0
✅ 环境变量优先级正确

# 测试无环境变量
EVOLVE_LOAD_MAX: (未设置)
实际阈值: 3.6
✅ 智能默认值生效
```

## 经验法则来源

**感谢**：王晓雷（晓雷）的建议

**经验法则**：
- 单核机器：阈值建议 0.8~1.0
- 多核机器：阈值建议 核心数 × 0.8~1.0
- 生产环境：预留 20% 余量应对突发流量

**实现选择**：使

--- a/package.json
+++ b/package.json
@@ -22,5 +22,7 @@
     "a2a:ingest": "node scripts/a2a_ingest.js",
     "a2a:promote": "node scripts/a2a_promote.js"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^16.4.7"
+  }
 }
